--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,10 @@ body {
   max-width: 500px;
   min-height: 300px;
   border: solid 2px black;
-  padding: 20px;
+  padding: 15px;
   overflow: auto;
   border-radius: 8px;
-  background-color: darkgray;
+  background-color: whitesmoke;
 }
 
 .container div {
@@ -27,10 +27,12 @@ body {
 }
 
 header {
-  margin-bottom: 20px;
+  margin-bottom: -20px;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 h1 {
@@ -66,4 +68,20 @@ footer {
 
 .card.reminder {
   border-left: solid 4px green;
+}
+form > .btn {
+  width: 100%;
+}
+
+.form-check-input {
+  float: right;
+}
+
+.mx {
+  margin: auto -20px;
+}
+
+label {
+  font-weight: 800;
+  font-size: large;
 }
