--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ footer {
 .card.reminder {
   border-left: solid 4px green;
 }
-form > .btn {
+.my-1 > .btn {
   width: 100%;
 }
 
@@ -78,7 +78,7 @@ form > .btn {
 }
 
 .mx {
-  margin: auto -20px;
+  margin: -20px -30px;
 }
 
 label {
