toggle task add container added

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  margin: 20px auto;
+  margin: 30px auto;
   max-width: 600px;
   min-height: 300px;
   border: solid 2px black;
@@ -27,7 +27,7 @@ body {
 }
 
 header {
-  margin-bottom: -20px;
+  margin-bottom: -5px;
   margin-left: 10px;
   margin-right: 10px;
   display: flex;
@@ -41,7 +41,7 @@ h1 {
 }
 
 footer {
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -55,7 +55,7 @@ footer {
 }
 .card-space {
   position: relative;
-  margin: 5px 10px;
+  margin: auto 10px;
   border: inset 1px black;
 }
 
